style: remove layout jumping on hover in interactive elements Fixes #22

--- a/src/styles/components/_score-bar.scss
+++ b/src/styles/components/_score-bar.scss
@@ -63,6 +63,7 @@
     cursor: pointer;
     display: inline-flex;
     align-items: center;
+    transition: opacity 0.2s ease, transform 0.1s ease;
 
     img {
       height: functions.px-to-rem(57);
